helm/routing/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: breakfast
spec:
  host: breakfast
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: lunch
spec:
  host: lunch
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dinner
spec:
  host: dinner
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
