helm/routing/dinner-v1.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dinner
spec:
  hosts:
  - dinner
  http:
  - route:
    - destination:
        host: dinner
        subset: v1
