helm/routing/fe-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: recipes-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recipes
spec:
  hosts:
  - "*"
  gateways:
  - recipes-gateway
  http:
  - route:
    - destination:
        host: front-end
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: breakfast
spec:
  hosts:
  - breakfast
  http:
  - route:
    - destination:
        host: breakfast
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lunch
spec:
  hosts:
  - lunch
  http:
  - route:
    - destination:
        host: lunch
